Задал стили и отступы для блоков на всех страницах

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,23 @@
-// Начните писать стили здесь
+
+// Globals
+@import "./global/varialbles.less";
+@import "./global/global.less";
+@import "./global/fonts.less";
+@import "./global/page.less";
+@import "./global/visually-hidden.less";
+
+// Components
+@import "./components/header.less";
+@import "./components/advantages.less";
+@import "./components/main-nav.less";
+@import "./components/intro.less";
+@import "./components/feedback";
+@import "./components/slider-list.less";
+@import "./components/pricing.less";
+@import "./components/contacts.less";
+@import "./components/footer.less";
+@import "./components/catalog.less";
+@import "./components/editor.less";
+@import "./components/journey.less";
+@import "./components/button.less";
+@import "./components/range.less";
