Исправил указаные ошибки

--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -25,7 +25,7 @@
 
   list-style: none;
 
-  background: @background-gray url("../img/backgrounds/phone-smile-bg.png") no-repeat 80px 540px;
+  background: @background-gray url("../img/backgrounds/phone-smile-bg.png") no-repeat 50% 110%;
 }
 
 .advantages__list-item {
