--- a/source/less/components/intro.less
+++ b/source/less/components/intro.less
@@ -12,7 +12,7 @@
 .intro__header {
   padding-bottom: 310px;
 
-  background: url("../img/backgrounds/phone-bg.png") no-repeat 0 80px;
+  background: url("../img/backgrounds/phone-bg.png") no-repeat 50% 100%;
 }
 
 .intro__slogan {
