--- a/source/less/components/contacts.less
+++ b/source/less/components/contacts.less
@@ -3,6 +3,14 @@
 
 .contacts__wrapper {
   padding: 50px 49px 10px;
+
+  @media (min-width: @tablet-width) {
+    padding: 55px 49px 10px 67px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 74px 160px 10px 177px;
+  }
 }
 
 .contacts__slogan {
@@ -13,9 +21,21 @@
   font-weight: 300;
   line-height: 28.8px;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 51px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 61px;
+  }
 }
 
 .contacts__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
   margin: 0;
   padding: 0;
 
@@ -53,6 +73,11 @@
   }
 }
 
-.contacts__map {
+.contacts__map-wrapper {
   margin: 0;
+}
+
+.contacts__map-img {
+  max-width: 100%;
+  object-fit: cover;
 }
