--- a/source/less/components/pricing.less
+++ b/source/less/components/pricing.less
@@ -4,14 +4,31 @@
 
 .pricing__wrapper {
   padding: 82px 0 49px;
+
+  @media (min-width: @tablet-width) {
+    padding: 56px 20px 70px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 56px 130px 98px;
+  }
 }
 
+
 .pricing__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+
   margin: 0;
   margin-bottom: 45px;
   padding: 0;
 
   list-style: none;
+
+  @media (min-width: @tablet-width) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-bottom: 0;
+  }
 }
 
 .pricing__list-item {
@@ -20,11 +37,11 @@
   & > p {
     margin: 0;
     padding: 20px 20px 20px;
-    max-height: 59px;
     box-sizing: border-box;
 
     text-transform: uppercase;
 
+    background-color: @basic-white;
     border: 1px solid @pricing-border-cell;
   }
 
@@ -37,7 +54,24 @@
   }
 }
 
+.pricing__side-legend {
+  display: none;
+
+  background-color: @background-gray;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+  }
+
+  & p:first-of-type {
+    border-top: 2px solid @pricing-border-cell;
+  }
+}
+
 .pricing__headline {
+  position: relative;
 
   color: @basic-white;
   text-align: center;
@@ -47,6 +81,7 @@
   background-color: @basic-font;
   border-left: 1px solid @background-gray;
   border-right: 1px solid @background-gray;
+  overflow: hidden;
 
   h3 {
     margin: 0;
@@ -64,6 +99,10 @@
 }
 
 .pricing__label-hit {
+  position: absolute;
+  top: 5px;
+  left: -35px;
+
   width: 105px;
   padding: 5px 0;
   margin: 0;
@@ -72,6 +111,7 @@
   font-weight: 400;
 
   background-color: @coral-red;
+  transform: rotate(-45deg);
 }
 
 // .pricing__list-item--current {
@@ -79,4 +119,8 @@
 
 .pricing__buttons {
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
