--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,6 @@
 
 // Globals
+@import "./global/viewport.less";
 @import "./global/varialbles.less";
 @import "./global/global.less";
 @import "./global/fonts.less";
@@ -21,3 +22,4 @@
 @import "./components/journey.less";
 @import "./components/button.less";
 @import "./components/range.less";
+@import "./components/effect.less";
