--- a/source/less/components/feedback.less
+++ b/source/less/components/feedback.less
@@ -3,6 +3,10 @@
 
 .feedback__wrapper {
   padding: 50px 20px 60px;
+
+  @media (min-width: @desktop-width) {
+    padding: 50px 130px 60px;
+  }
 }
 
 .feedback__list {
@@ -13,6 +17,9 @@
 
 
 .feedback__list-item {
+  display: flex;
+  flex-direction: column;
+
   text-align: center;
 }
 
@@ -27,14 +34,39 @@
 
   font-size: 18px;
   font-weight: 700;
+
+  @media (min-width: @tablet-width) {
+    order: 2;
+    margin-bottom: 49px;
+  }
+}
+
+.feedback__title-job {
+  display: none;
+
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    display: block;
+  }
 }
 
 .feedback__text {
   margin: 0;
 
   line-height: 30px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 51px;
+  }
 }
 
 .feedback__buttons {
   margin: 0;
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
 }
