--- a/source/less/components/footer.less
+++ b/source/less/components/footer.less
@@ -2,7 +2,16 @@
 // }
 
 .footer__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   padding: 40px 20px 40px;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .footer__logo {
@@ -13,6 +22,7 @@
 // }
 
 .footer__social-list {
+  display: flex;
   margin: 0;
   padding: 0;
 
