--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -2,17 +2,23 @@
   // display: none;
   background-color: @basic-font;
 }
-// .main-nav__toggle {
-// }
 
 // .main-nav__wrapper {
 // }
 
 .main-nav__list {
+  display: flex;
+  flex-direction: column;
+
   padding: 0;
   margin: 0;
 
   list-style: none;
+
+  @media (min-width: @desktop-width) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .main-nav__list-item {
@@ -39,5 +45,10 @@
 
   & a:active {
     color: @coral-red-active;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-color: none;
+    border: none;
   }
 }
