Текущая версия с проблемным контейнером в header, проблема начинается на разрешении в 900

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,6 +6,7 @@
 @import "./global/fonts.less";
 @import "./global/page.less";
 @import "./global/visually-hidden.less";
+@import "./global/container.less";
 
 // Components
 @import "./components/header.less";
