--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -52,7 +52,7 @@
     justify-content: center;
     order: 0;
 
-    width: 45%;
+    width: 50%;
   }
 
   @media (min-width: @desktop-width) {
@@ -74,10 +74,16 @@
   }
 }
 
-.advantages__screen-img {
+.advantages__img {
+  display: none;
+
   width: 157px;
   height: 320px;
   object-fit: cover;
+
+  &--visible {
+    display: block;
+  }
 
   @media (min-width: @tablet-width) {
     width: 268px;
@@ -100,7 +106,7 @@
     display: flex;
     flex-direction: column;
 
-    width: 55%;
+    width: 50%;
   }
 
   @media (min-width: @desktop-width) {
