--- a/source/less/components/pricing.less
+++ b/source/less/components/pricing.less
@@ -22,8 +22,11 @@
   margin: 0;
   margin-bottom: 45px;
   padding: 0;
+  width: 100%;
 
   list-style: none;
+
+  overflow-x: auto;
 
   @media (min-width: @tablet-width) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -58,7 +61,7 @@
   }
 
   @media (max-width: @mobile-width-only) {
-    display: none;
+    min-width: 276px;
 
     &--current {
       display: block;
