Закончил исправлять главную страницу

--- a/source/less/components/feedback.less
+++ b/source/less/components/feedback.less
@@ -2,16 +2,12 @@
 // }
 
 .feedback__wrapper {
-  padding: 50px 20px 60px;
-
-  @media (min-width: @desktop-width) {
-    padding: 50px 130px 60px;
-  }
+  box-sizing: border-box;
 }
 
 .feedback__list {
   margin: 0;
-  padding: 0;
+  padding: 50px 0 60px;
   list-style: none;
 }
 
