--- a/source/less/style.less
+++ b/source/less/style.less
@@ -24,3 +24,5 @@
 @import "./components/button.less";
 @import "./components/range.less";
 @import "./components/effect.less";
+@import "./components/main-slogan.less";
+@import "./components/map.less";
