--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -1,36 +1,30 @@
-// .advantages {
+.advantages {
+  background-color: @background-gray;
+}
 
-// }
-
-// .advantages__wrapper {
-
-// }
-
-// .advantages__header {
-
-// }
-
-.advantages__slogan {
-  margin: 0;
-  padding: 46px 20px 70px;
-
-  font-size: 24px;
-  line-height: 28.8px;
-  font-weight: 300;
-  text-align: center;
+.advantages__wrapper {
+  box-sizing: border-box;
 }
 
 .advantages__list-wrapper {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  padding: 0 20px 0;
+  padding: 103px 0 49px;
+
+  box-sizing: border-box;
+  overflow: hidden;
 
   background: @background-gray;
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
+    justify-content: flex-end;
+
+    padding: 103px 0 49px;
   }
 
   @media (min-width: @desktop-width) {
@@ -38,39 +32,108 @@
   }
 }
 
-.advantages__screen-list {
-  order: 2;
+// .advantages__screen-list {
+//   order: 2;
+
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: border-box;
+
+//   list-style: none;
+
+//   @media (min-width: @tablet-width) {
+//     display: flex;
+//     justify-content: center;
+//     order: 0;
+
+//     width: 50%;
+//   }
+
+//   @media (min-width: @desktop-width) {
+//     max-width: 876px;
+//     width: 100%;
+//     justify-content: space-between;
+//   }
+// }
+
+// .advantages__screen-item {
+//   display: none;
+
+//   &--visible {
+//     display: block;
+//   }
+
+//   @media (min-width: @desktop-width) {
+//     display: block;
+//   }
+// }
+
+.advantages__list {
+  position: relative;
 
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 
   list-style: none;
 
   @media (min-width: @tablet-width) {
     display: flex;
-    justify-content: center;
-    order: 0;
+    flex-direction: column;
 
     width: 50%;
   }
 
   @media (min-width: @desktop-width) {
-    max-width: 876px;
+    flex-direction: row;
     width: 100%;
-    justify-content: space-between;
   }
 }
 
-.advantages__screen-item {
-  display: none;
+.advantages__list-item {
+  position: relative;
 
-  &--visible {
-    display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin-bottom: 43px;
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+
+  @media (min-width: @tablet-width) and (max-width: 1199px) {
+    align-items: flex-start;
   }
 
   @media (min-width: @desktop-width) {
-    display: block;
+    margin-bottom: 0;
+  }
+}
+
+.advantages__title {
+  margin: 0;
+  margin-bottom: 24px;
+
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+
+  @media (min-width: @desktop-width) {
+    order: 2;
+  }
+}
+
+.advantages__description {
+  margin: 0;
+  text-align: center;
+
+  @media (min-width: @tablet-width) and (max-width: 1199px) {
+    text-align: left;
+  }
+
+  @media (min-width: @desktop-width) {
+    order: 3;
   }
 }
 
@@ -85,53 +148,20 @@
     display: block;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @tablet-width) and (max-width: 1199px) {
+    position: absolute;
+    bottom: -115%;
+    right: 110%;
+
     width: 268px;
     height: 547px;
   }
 
   @media (min-width: @desktop-width) {
+    display: block;
+    order: 1;
+
     width: 186px;
     height: 382px;
   }
-}
-
-.advantages__list {
-  margin: 0;
-  padding: 55px 0 48px;
-
-  list-style: none;
-
-  @media (min-width: @tablet-width) {
-    display: flex;
-    flex-direction: column;
-
-    width: 50%;
-  }
-
-  @media (min-width: @desktop-width) {
-    flex-direction: row;
-  }
-}
-
-.advantages__list-item {
-  margin-bottom: 43px;
-
-  &:last-of-type {
-    margin-bottom: 0;
-  }
-
-  text-align: center;
-}
-
-.advantages__title {
-  margin: 0;
-  margin-bottom: 24px;
-
-  font-size: 18px;
-  font-weight: 700;
-}
-
-.advantages__description {
-  margin: 0;
 }
