--- a/source/less/components/contacts.less
+++ b/source/less/components/contacts.less
@@ -2,14 +2,17 @@
 // }
 
 .contacts__wrapper {
-  padding: 50px 49px 10px;
+  padding-top: 50px;
+  padding-bottom: 10px;
+  box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
-    padding: 55px 49px 10px 67px;
+    padding-top: 55px;
+    padding-bottom: 67px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 74px 160px 10px 177px;
+    padding-top: 74px;
   }
 }
 
@@ -71,13 +74,4 @@
     color: @slider-btn;
     text-decoration: none;
   }
-}
-
-.contacts__map-wrapper {
-  margin: 0;
-}
-
-.contacts__map-img {
-  max-width: 100%;
-  object-fit: cover;
 }
