--- a/source/less/components/effect.less
+++ b/source/less/components/effect.less
@@ -11,10 +11,11 @@
   justify-content: space-between;
   align-items: center;
 
-  padding: 54px 20px 54px;
+  padding: 54px 0 54px;
+  box-sizing: border-box;
 
   @media (min-width: @desktop-width) {
-    padding: 17px 166px 67px 131px;
+    padding: 17px 0 67px 0;
   }
 }
 
