--- a/source/less/components/footer.less
+++ b/source/less/components/footer.less
@@ -6,7 +6,10 @@
   flex-direction: column;
   align-items: center;
 
-  padding: 40px 20px 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+  box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
