--- a/source/less/components/header.less
+++ b/source/less/components/header.less
@@ -14,11 +14,11 @@
   justify-content: space-between;
   align-items: center;
 
-  height: 66px;
-  padding: 0 20px;
+  min-height: 66px;
+  box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
-    height: 110px;
+    min-height: 110px;
   }
 }
 
