--- a/source/less/components/intro.less
+++ b/source/less/components/intro.less
@@ -6,21 +6,28 @@
 }
 
 .intro__wrapper {
-  padding: 95px 20px 38px;
+  box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
-    padding: 102px 20px 119px;
-  }
-
-  @media (min-width: @desktop-width) {
-    padding: 114px 130px 130px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
 
 .intro__header {
+  padding-top: 95px;
   padding-bottom: 310px;
 
   background: url("../img/backgrounds/phone-bg.png") no-repeat 50% 100%;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 102px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 114px;
+  }
 }
 
 .intro__slogan {
@@ -34,6 +41,16 @@
 
 .intro__download-wrapper {
   padding-top: 28px;
+
+  padding-bottom: 38px;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 119px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 130px;
+  }
 }
 
 .intro__download-button {
