--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -3,8 +3,15 @@
   background-color: @basic-font;
 }
 
-// .main-nav__wrapper {
-// }
+.main-nav__wrapper {
+  width: 100%;
+  margin: 0 auto;
+
+  @media (min-width: @desktop-width) {
+    max-width: 940px;
+    padding: 0 20px;
+  }
+}
 
 .main-nav__list {
   display: flex;
