поменял 1199 на @desktop-width

--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -102,7 +102,7 @@
     margin-bottom: 0;
   }
 
-  @media (min-width: @tablet-width) and (max-width: 1199px) {
+  @media (min-width: @tablet-width) and (max-width: @desktop-width) {
     align-items: flex-start;
   }
 
@@ -128,7 +128,7 @@
   margin: 0;
   text-align: center;
 
-  @media (min-width: @tablet-width) and (max-width: 1199px) {
+  @media (min-width: @tablet-width) and (max-width: @desktop-width) {
     text-align: left;
   }
 
@@ -148,7 +148,7 @@
     display: block;
   }
 
-  @media (min-width: @tablet-width) and (max-width: 1199px) {
+  @media (min-width: @tablet-width) and (max-width: @desktop-width) {
     position: absolute;
     bottom: -115%;
     right: 110%;
