--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -1,6 +1,10 @@
 .main-nav {
   // display: none;
   background-color: @basic-font;
+
+  @media (min-width: @desktop-width) {
+    background-color: transparent;
+  }
 }
 
 .main-nav__wrapper {
