Сделал сетку для каталога и формы

--- a/source/less/components/button.less
+++ b/source/less/components/button.less
@@ -2,6 +2,7 @@
   color: @basic-white;
   font-size: 18px;
   font-weight: 700;
+  text-transform: uppercase;
 
   border: none;
   cursor: pointer;
