--- a/source/less/components/intro.less
+++ b/source/less/components/intro.less
@@ -39,6 +39,15 @@
   text-align: center;
 }
 
+.intro__slogan-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding-top: 102px;
+  padding-bottom: 51px;
+}
+
 .intro__download-wrapper {
   padding-top: 28px;
 
