--- a/source/less/components/editor.less
+++ b/source/less/components/editor.less
@@ -3,46 +3,128 @@
 }
 
 .editor__wrapper {
-  padding: 20px 20px 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding-top: 20px;
+  padding-bottom: 40px;
+
+  box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+
+    padding-top: 57px;
+    padding-bottom: 54px;
+  }
 }
 
 .editor__image {
   margin: 0;
+
+  height: 100%;
+  object-fit: cover;
+
+  @media (min-width: @tablet-width) {
+    grid-row: 1/3;
+  }
 }
 
 .editor__list {
+  position: relative;
+
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 
   margin: 0;
   margin-bottom: 38px;
-  padding: 0;
+  padding: 0 0 50px 0;
+  width: 100%;
+  max-width: 240px;
+  box-sizing: border-box;
 
   list-style: none;
 
   border-bottom: 1px solid @editor-inner-border;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: column;
+    gap: 26px;
+
+    max-width: none;
+    padding-bottom: 0;
+    margin-bottom: 0;
+
+    border-bottom: none;
+  }
 }
 
 .editor__list-item {
-  padding-bottom: 34px;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+
+  &--active {
+    position: relative;
+    // width: 100%;
+  }
+
+  @media (min-width: @tablet-width) {
+    position: relative;
+
+    display: flex;
+
+    padding-bottom: 24px;
+
+    border-bottom: 1px solid @editor-inner-border;
+  }
 }
 
-// .editor__list-item--active {
-// }
-
 .editor__tools-btn {
-  margin-bottom: 39px;
-
   border: none;
   background-color: none;
 
   cursor: pointer;
+
+  &--fill {
+    transform: translateX(90px);
+
+    @media (min-width: @tablet-width) {
+      transform: none;
+    }
+  }
+
+  &--contrast {
+    transform: translateX(190px);
+
+    @media (min-width: @tablet-width) {
+      transform: none;
+    }
+  }
 }
 
 .editor__buttons {
   display: flex;
   flex-direction: column;
+  align-items: center;
+
+  width: 100%;
+
+  @media (min-width: @tablet-width) {
+    grid-column: 2/3;
+    padding-top: 67px;
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .editor__button {
@@ -58,11 +140,27 @@
   background-color: none;
   border-radius: 30px;
 
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 183px;
+  }
+
   &--upload {
     margin-bottom: 12px;
 
     color: @coral-red;
     border: 3px solid @coral-red;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 24px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-bottom: 0;
+    }
   }
 
   &--upload:hover {
@@ -94,7 +192,21 @@
 .editor__range-wrapper {
   display: none;
 
+  @media (min-width: @tablet-width) {
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+
+  & input {
+    width: 100%;
+  }
+
   &--active {
     display: block;
+
+    @media (min-width: @tablet-width) {
+      display: flex;
+    }
   }
 }
