--- a/source/less/components/feedback.less
+++ b/source/less/components/feedback.less
@@ -2,12 +2,20 @@
 // }
 
 .feedback__wrapper {
+  padding-top: 50px;
+  padding-bottom: 60px;
   box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 95px;
+  }
 }
 
 .feedback__list {
   margin: 0;
-  padding: 50px 0 60px;
+  padding: 0;
+  margin-bottom: 47px;
+
   list-style: none;
 }
 
@@ -15,6 +23,7 @@
 .feedback__list-item {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   text-align: center;
 }
@@ -22,6 +31,15 @@
 // .feedback__list-item--current {
 // }
 
+.feedback__qoutes-img {
+  display: none;
+
+  @media (min-width: @desktop-width) {
+    display: block;
+
+    margin-bottom: 58px;
+  }
+}
 
 .feedback__title {
   display: block;
@@ -33,7 +51,8 @@
 
   @media (min-width: @tablet-width) {
     order: 2;
-    margin-bottom: 49px;
+
+    margin-bottom: 0;
   }
 }
 
@@ -56,6 +75,8 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 51px;
+
+    font-size: 18px;
   }
 }
 
