--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -13,7 +13,8 @@
   flex-direction: column;
   align-items: center;
 
-  padding: 103px 0 49px;
+  padding-top: 53px;
+  padding-bottom: 0;
 
   box-sizing: border-box;
   overflow: hidden;
@@ -24,49 +25,14 @@
     flex-direction: row;
     justify-content: flex-end;
 
-    padding: 103px 0 49px;
+    padding-top: 103px;
+    padding-bottom: 49px;
   }
 
   @media (min-width: @desktop-width) {
     flex-direction: column;
   }
 }
-
-// .advantages__screen-list {
-//   order: 2;
-
-//   margin: 0;
-//   padding: 0;
-//   box-sizing: border-box;
-
-//   list-style: none;
-
-//   @media (min-width: @tablet-width) {
-//     display: flex;
-//     justify-content: center;
-//     order: 0;
-
-//     width: 50%;
-//   }
-
-//   @media (min-width: @desktop-width) {
-//     max-width: 876px;
-//     width: 100%;
-//     justify-content: space-between;
-//   }
-// }
-
-// .advantages__screen-item {
-//   display: none;
-
-//   &--visible {
-//     display: block;
-//   }
-
-//   @media (min-width: @desktop-width) {
-//     display: block;
-//   }
-// }
 
 .advantages__list {
   position: relative;
@@ -102,12 +68,21 @@
     margin-bottom: 0;
   }
 
-  @media (min-width: @tablet-width) and (max-width: @desktop-width) {
+  @media (min-width: @tablet-width) {
     align-items: flex-start;
+
+    margin-bottom: 43px;
   }
 
   @media (min-width: @desktop-width) {
+    align-items: center;
+
     margin-bottom: 0;
+    margin-right: 68px;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
@@ -125,15 +100,48 @@
 }
 
 .advantages__description {
+  position: relative;
+
   margin: 0;
   text-align: center;
 
-  @media (min-width: @tablet-width) and (max-width: @desktop-width) {
+  @media (min-width: @tablet-width) {
     text-align: left;
   }
 
   @media (min-width: @desktop-width) {
     order: 3;
+
+    text-align: center;
+  }
+}
+
+.advantages__img-wrapper {
+  margin: 0;
+
+  @media (max-width: @mobile-width-only) {
+    display: none;
+
+    min-width: 157px;
+    min-height: 277px;
+
+    &--visible {
+      display: block;
+
+      min-width: 157px;
+      margin-top: 47px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    position: relative;
+
+    order: 1;
+
+    margin-bottom: 50px;
+    min-width: 186px;
+    min-height: 300px;
+    overflow: hidden;
   }
 }
 
@@ -146,6 +154,10 @@
 
   &--visible {
     display: block;
+
+    @media (max-width: @mobile-width-only) {
+      position: absolute;
+    }
   }
 
   @media (min-width: @tablet-width) and (max-width: @desktop-width) {
@@ -158,8 +170,11 @@
   }
 
   @media (min-width: @desktop-width) {
+    position: absolute;
+    bottom: -82px;
+    right: 0;
+
     display: block;
-    order: 1;
 
     width: 186px;
     height: 382px;
