--- a/source/less/components/footer.less
+++ b/source/less/components/footer.less
@@ -19,6 +19,11 @@
 
 .footer__logo {
   margin: 0;
+  margin-bottom: 41px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+  }
 }
 
 // .footer__logo-link {
@@ -27,14 +32,23 @@
 .footer__social-list {
   display: flex;
   margin: 0;
+  margin-bottom: 41px;
   padding: 0;
 
   list-style: none;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+  }
 }
 
-// .footer__social-item {
+.footer__social-item {
+  margin-right: 8px;
 
-// }
+  &:last-of-type {
+    margin-right: 0;
+  }
+}
 
 .footer__social-link {
   display: flex;
@@ -46,10 +60,43 @@
 
   border: 3px solid @footer-social-border;
   border-radius: 50%;
+
+  &:hover {
+    border: 3px solid @basic-font;
+  }
+
+  &:active {
+    opacity: 0.1;
+  }
 }
 
 .footer__copyright {
+  display: flex;
+  align-items: center;
+
   margin: 0;
 
   line-height: 18px;
+
+  & span {
+    margin-right: 15px;
+  }
+
+  &:hover .footer__copyright-link {
+    & svg {
+      fill: @basic-font;
+    }
+  }
+
+  &:active .footer__copyright-link {
+    & svg {
+      fill: fade(@basic-font, 30%);
+    }
+  }
+}
+
+.footer__copyright-link {
+  & svg {
+    fill: @coral-red;
+  }
 }
