--- a/source/less/components/header.less
+++ b/source/less/components/header.less
@@ -1,13 +1,17 @@
 .header {
-  display: flex;
-  flex-direction: column;
+  position: absolute;
+
+  width: 100%;
 
   font-size: 18px;
   font-weight: 700;
 
   background-color: @background-header;
-}
 
+  @media (min-width: @desktop-width) {
+    font-weight: 400;
+  }
+}
 
 .header__wrapper {
   display: flex;
@@ -22,11 +26,9 @@
   }
 }
 
-// .header__logo {
-// }
-
-.header__nav-toggle {
-  @media (min-width: @desktop-width) {
-    display: none;
+.header__logo {
+  & img {
+    width: 74px;
+    height: 23px;
   }
 }
