--- a/source/less/components/main-slogan.less
+++ b/source/less/components/main-slogan.less
@@ -1,11 +1,35 @@
 .main-slogan {
   background-color: @basic-white;
+
+  @media (min-width: @tablet-width) {
+    background-color: @pricing-border-cell;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-color: @basic-white;
+  }
 }
 
 .main-slogan__wrapper {
-  padding: 46px 0 70px;
-
+  padding-top: 46px;
+  padding-bottom: 70px;
   box-sizing: border-box;
+
+  background-color: @basic-white;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 58px;
+    padding-bottom: 47px;
+
+    background-color: @pricing-border-cell;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 77px;
+    padding-bottom: 66px;
+
+    background-color: @basic-white;
+  }
 }
 
 .main-slogan__text {
@@ -15,4 +39,17 @@
   line-height: 28.8px;
   font-weight: 300;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 16px;
+    font-size: 40px;
+    line-height: 54px;
+    br {
+      display: none;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 0 60px;
+  }
 }
