--- a/source/less/components/map.less
+++ b/source/less/components/map.less
@@ -3,10 +3,26 @@
   width: 100%;
   max-height: 502px;
   margin: 0 auto;
+
+  & iframe {
+    display: block;
+
+    max-width: 100%;
+    max-height: 100%;
+
+    border: none;
+
+    // @media (max-width: @mobile-width-only) {
+    //   max-width: 100%;
+    //   max-height: 100%;
+    // }
+  }
 }
 
-.map__img {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: cover;
-}
+// .map__img {
+//   display: block;
+
+//   max-width: 100%;
+//   max-height: 100%;
+//   object-fit: cover;
+// }
