--- a/source/less/components/contacts.less
+++ b/source/less/components/contacts.less
@@ -72,14 +72,13 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 55px;
-
-    // &:nth-of-type(2n) {
-    //   margin-left: 97px;
-    // }
+    width: 100%;
+    max-width: 50%;
   }
 
   @media (min-width: @desktop-width) {
     margin-bottom: 0;
+    width: auto;
 
     &:first-of-type {
       margin-right: 0;
