--- a/source/less/components/header.less
+++ b/source/less/components/header.less
@@ -13,6 +13,14 @@
   }
 }
 
+.header--opened {
+  background-color: @basic-font;
+
+  @media (min-width: @desktop-width) {
+    background-color: transparent;
+  }
+}
+
 .header__wrapper {
   display: flex;
   justify-content: space-between;
