--- a/source/less/components/intro.less
+++ b/source/less/components/intro.less
@@ -3,15 +3,19 @@
   background-color: @bg-dark-blue;
   background-image: url("../img/backgrounds/back-mobile.jpg");
   background-position: 50% 0;
-  background-size: cover;
+  background-size: 100% 462px;
   background-repeat: no-repeat;
 
   @media (min-width: @tablet-width) {
-    background-image: url("../img/backgrounds/back-tablet.jpg");
+    background-image: url("../img/backgrounds/phone-bg-tablet.png"), url("../img/backgrounds/back-tablet.jpg");
+    background-position: bottom, 50% 0;
+    background-size: 80%, cover;
   }
 
   @media (min-width: @desktop-width) {
-    background-image: url("../img/backgrounds/back-desktop.jpg");
+    background-image: url("../img/backgrounds/phone-bg-tablet.png"), url("../img/backgrounds/back-desktop.jpg");
+    background-position: 60% 100%, 50% 0;
+    background-size: 65%, cover;
   }
 }
 
@@ -32,6 +36,12 @@
 }
 
 .intro__inner-wrapper {
+  @media (max-width: @mobile-width-only) {
+    max-width: 280px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: column;
@@ -39,13 +49,17 @@
 
     max-width: 300px;
   }
-
-  @media (min-width: @desktop-width) {
-  }
 }
 
 .intro__header {
-  padding-bottom: 310px;
+  padding-bottom: 308px;
+
+  @media (max-width: @mobile-width-only) {
+    background-image: url("../img/backgrounds/phone-bg-mobile.png");
+    background-position: bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
 
   @media (min-width: @tablet-width) {
     padding-bottom: 39px;
