--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -1,7 +1,6 @@
 .main-nav {
   // display: none;
   // background-color: @basic-font;
-  position: relative;
   width: auto;
 
   background-color: transparent;
@@ -12,11 +11,25 @@
 }
 
 .main-nav__wrapper {
+  position: absolute;
+  left: 0;
+  top: 66px;
+
   width: 100%;
   margin: 0 auto;
 
+  background-color: @basic-font;
+
+  @media (min-width: @tablet-width) {
+    top: 110px;
+  }
+
   @media (min-width: @desktop-width) {
+    position: relative;
+    top: 0;
+
     max-width: 670px;
+    background-color: transparent;
   }
 }
 
@@ -72,31 +85,39 @@
     background-color: none;
     border: none;
 
-    // &:first-of-type {
-    //   padding-left: 0;
-    // }
-
     &:last-of-type {
       margin-right: 0;
-    }
-
-    &--active {
-      position: relative;
-
-      &::after {
-        content: "";
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        height: 2px;
-        background: @basic-white;
-      }
     }
   }
 }
 
+.main-nav__list-item--active {
+  @media (min-width: @desktop-width) {
+    position: relative;
+
+    &::after {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      height: 2px;
+      background: @basic-white;
+      content: "";
+    }
+  }
+}
+
+.main-nav--opened {
+  background-color: @basic-font;
+
+  @media (min-width: @desktop-width) {
+    background-color: transparent;
+  }
+}
+
 .main-nav__toggle {
+  position: relative;
+
   height: 24px;
   width: 50px;
   padding: 0;
@@ -153,8 +174,8 @@
     content: "";
 
     position: absolute;
-    top: 16px;
-    left: 28px;
+    top: 9px;
+    left: 30px;
 
     width: 21px;
     height: 3px;
@@ -188,5 +209,9 @@
 
   @media (min-width: @tablet-width) {
     display: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
   }
 }
