--- a/source/less/components/map.less
+++ b/source/less/components/map.less
@@ -1,5 +1,4 @@
 .map__wrapper {
-  max-width: 1200px;
   width: 100%;
   max-height: 502px;
   margin: 0 auto;
@@ -9,20 +8,9 @@
 
     max-width: 100%;
     max-height: 100%;
+    width: 100%;
 
     border: none;
-
-    // @media (max-width: @mobile-width-only) {
-    //   max-width: 100%;
-    //   max-height: 100%;
-    // }
   }
 }
 
-// .map__img {
-//   display: block;
-
-//   max-width: 100%;
-//   max-height: 100%;
-//   object-fit: cover;
-// }
