--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -158,17 +158,19 @@
 }
 
 .advantages__shadow {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: -57px;
+  @media (min-width: @desktop-width) {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: -57px;
 
-  width: 300px;
-  height: 17px;
-  margin: 0;
+    width: 300px;
+    height: 17px;
+    margin: 0;
 
-  background: url("../img/decor/shadow.png") no-repeat;
-  background-position: 0 0;
+    background: url("../img/decor/shadow.png") no-repeat;
+    background-position: 0 0;
+  }
 }
 
 .advantages__img {
