--- a/source/less/components/intro.less
+++ b/source/less/components/intro.less
@@ -7,15 +7,15 @@
   background-repeat: no-repeat;
 
   @media (min-width: @tablet-width) {
-    background-image: url("../img/backgrounds/phone-bg-tablet.png"), url("../img/backgrounds/back-tablet.jpg");
-    background-position: bottom, 50% 0;
-    background-size: 80%, cover;
+    background-image: url("../img/backgrounds/back-tablet.jpg");
+    background-position: 50% 0;
+    background-size: cover;
   }
 
   @media (min-width: @desktop-width) {
-    background-image: url("../img/backgrounds/phone-bg-tablet.png"), url("../img/backgrounds/back-desktop.jpg");
-    background-position: 60% 100%, 50% 0;
-    background-size: 65%, cover;
+    background-image: url("../img/backgrounds/back-desktop.jpg");
+    background-position: 50% 0;
+    background-size: cover;
   }
 }
 
@@ -36,6 +36,8 @@
 }
 
 .intro__inner-wrapper {
+  position: relative;
+
   @media (max-width: @mobile-width-only) {
     max-width: 280px;
     width: 100%;
@@ -54,15 +56,10 @@
 .intro__header {
   padding-bottom: 308px;
 
-  @media (max-width: @mobile-width-only) {
-    background-image: url("../img/backgrounds/phone-bg-mobile.png");
-    background-position: bottom;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-
   @media (min-width: @tablet-width) {
     padding-bottom: 39px;
+
+    z-index: 1;
   }
 
   @media (min-width: @desktop-width) {
@@ -89,24 +86,51 @@
   }
 }
 
-.intro__slogan-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.intro__screen {
+  position: absolute;
+  top: 99px;
+  left: 0;
 
-  padding-top: 102px;
-  padding-bottom: 51px;
+  width: 280px;
+  height: 286px;
+
+  background-image: url("../img/backgrounds/phone-bg-mobile.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 50%;
+
+  @media (min-width: @tablet-width) {
+    width: 660px;
+    height: 545px;
+    top: -29px;
+    left: 0;
+
+    background-image: url("../img/backgrounds/phone-bg-tablet.png");
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1050px;
+    height: 645px;
+    top: 3px;
+    left: 0;
+
+    background-image: url("../img/backgrounds/phone-bg-desktop.png");
+  }
 }
 
 .intro__download-wrapper {
   padding-top: 28px;
+
+  @media (min-width: @tablet-width) {
+    z-index: 1;
+  }
 }
 
 .intro__download-button {
   display: block;
 
   margin-bottom: 32px;
-  padding: 21px 38px;
+  padding: 21px 35px;
   box-sizing: border-box;
 
   font-size: 18px;
