--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -1,5 +1,13 @@
 .advantages {
-  background-color: @background-gray;
+  background: linear-gradient(-4deg, #f2f2f2 94%, #ffffff 50%);
+
+  @media (min-width: @tablet-width) {
+    background: linear-gradient(-5deg, #f2f2f2 90%, #ffffff 50%);
+  }
+
+  @media (min-width: @desktop-width) {
+    background: linear-gradient(-5deg, #f2f2f2 81%, #ffffff 50%);
+  }
 }
 
 .advantages__wrapper {
@@ -13,13 +21,13 @@
   flex-direction: column;
   align-items: center;
 
-  padding-top: 53px;
+  padding-top: 85px;
   padding-bottom: 0;
 
   box-sizing: border-box;
   overflow: hidden;
 
-  background: @background-gray;
+  // background: @background-gray;
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
@@ -31,6 +39,7 @@
 
   @media (min-width: @desktop-width) {
     flex-direction: column;
+    padding-top: 36px;
   }
 }
 
@@ -190,11 +199,10 @@
 
   @media (min-width: @tablet-width) and (max-width: @desktop-width) {
     position: absolute;
-    bottom: -115%;
-    right: 110%;
-
-    width: 268px;
-    height: 547px;
+    bottom: -109%;
+    right: 107%;
+    width: 300px;
+    height: 616px;
   }
 
   @media (min-width: @desktop-width) {
