--- a/source/less/components/intro.less
+++ b/source/less/components/intro.less
@@ -103,7 +103,7 @@
     width: 660px;
     height: 545px;
     top: -29px;
-    left: 0;
+    left: -20px;
 
     background-image: url("../img/backgrounds/phone-bg-tablet.png");
   }
