Добавил декоративный триугольник в карту

--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -1,12 +1,12 @@
 .advantages {
-  background: linear-gradient(-4deg, #f2f2f2 94%, #ffffff 50%);
+  background: linear-gradient(-4deg, @background-gray 94%, @basic-white 50%);
 
   @media (min-width: @tablet-width) {
-    background: linear-gradient(-5deg, #f2f2f2 90%, #ffffff 50%);
+    background: linear-gradient(-5deg, @background-gray 90%, @basic-white 50%);
   }
 
   @media (min-width: @desktop-width) {
-    background: linear-gradient(-5deg, #f2f2f2 81%, #ffffff 50%);
+    background: linear-gradient(-5deg, @background-gray 81%, @basic-white 50%);
   }
 }
 
